// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangesetNode renders a changesetplan with publishing disabled 1`] = `
Object {
  "children": <div
    className="changeset-node__content changeset-node__content--no-collapse flex-fill"
  >
    <div
      className="d-flex align-items-start m-1 ml-2"
    >
      <div
        className="changeset-node__content flex-fill"
      >
        <div
          className="d-flex flex-column"
        >
          <div>
            <Octicon
              className="icon-inline mr-2"
              icon={[Function]}
              size={16}
              verticalAlign="text-bottom"
            />
            <strong>
              <AnchorLink
                className="text-muted"
                rel="noopener noreferrer"
                target="_blank"
                to="github.com/sourcegraph/sourcegraph"
              >
                sourcegraph
              </AnchorLink>
            </strong>
          </div>
        </div>
      </div>
      <div
        className="flex-shrink-0 flex-grow-0 ml-1 align-items-end"
      >
        <DiffStat
          added={100}
          changed={200}
          deleted={100}
          expandedCounts={true}
        />
      </div>
      <div
        className="flex-shrink-0 flex-grow-0 ml-1 align-items-end"
      />
    </div>
  </div>,
  "className": "list-group-item e2e-changeset-node",
}
`;

exports[`ChangesetNode renders a changesetplan with publishing enabled 1`] = `
Object {
  "children": <div
    className="changeset-node__content changeset-node__content--no-collapse flex-fill"
  >
    <div
      className="d-flex align-items-start m-1 ml-2"
    >
      <div
        className="changeset-node__content flex-fill"
      >
        <div
          className="d-flex flex-column"
        >
          <div>
            <Octicon
              className="icon-inline mr-2"
              icon={[Function]}
              size={16}
              verticalAlign="text-bottom"
            />
            <strong>
              <AnchorLink
                className="text-muted"
                rel="noopener noreferrer"
                target="_blank"
                to="github.com/sourcegraph/sourcegraph"
              >
                sourcegraph
              </AnchorLink>
            </strong>
          </div>
        </div>
      </div>
      <div
        className="flex-shrink-0 flex-grow-0 ml-1 align-items-end"
      >
        <DiffStat
          added={100}
          changed={200}
          deleted={100}
          expandedCounts={true}
        />
      </div>
      <div
        className="flex-shrink-0 flex-grow-0 ml-1 align-items-end"
      />
      <React.Fragment>
        <button
          className="flex-shrink-0 flex-grow-0 btn btn-sm btn-secondary ml-2"
          onClick={[Function]}
          type="button"
        >
           
          Publish
        </button>
      </React.Fragment>
    </div>
  </div>,
  "className": "list-group-item e2e-changeset-node",
}
`;

exports[`ChangesetNode renders an externalchangeset 1`] = `
Object {
  "children": <Collapsible
    title={
      <div
        className="d-flex align-items-start m-1 ml-2"
      >
        <div
          className="changeset-node__content flex-fill"
        >
          <div
            className="d-flex flex-column"
          >
            <div
              className="m-0 mb-2"
            >
              <SourcePullIcon
                className="mr-1 icon-inline text-success"
                data-tooltip="open"
              />
              <h3
                className="m-0 d-inline"
              >
                <LinkOrSpan
                  rel="noopener noreferrer"
                  target="_blank"
                  to="https://github.com/sourcegraph/sourcegraph/pull/111111"
                >
                  Remove lodash
                   (#
                  123
                  )
                </LinkOrSpan>
              </h3>
              <small>
                <Memo(ErrorIcon)
                  className="ml-1 changeset-node__check-state text-danger"
                  data-tooltip="Some checks failed"
                />
              </small>
              <span
                className="ml-2"
              >
                <ChangesetLabel
                  label={
                    Object {
                      "__typename": "ChangesetLabel",
                      "color": "93ba13",
                      "description": "Something is broken",
                      "text": "bug",
                    }
                  }
                />
              </span>
            </div>
            <div>
              <strong>
                <AnchorLink
                  className=""
                  rel="noopener noreferrer"
                  target="_blank"
                  to="github.com/sourcegraph/sourcegraph"
                >
                  sourcegraph
                </AnchorLink>
              </strong>
              <small
                className="text-muted ml-2"
              >
                Last synced 
                17 days
                 ago.
                 
                <span
                  data-tooltip="Click to prioritize refresh"
                >
                  <Memo(SyncIcon)
                    className="icon-inline cursor-pointer"
                    onClick={[Function]}
                  />
                </span>
              </small>
            </div>
          </div>
        </div>
        <div
          className="flex-shrink-0 flex-grow-0 ml-1 align-items-end"
        >
          <DiffStat
            added={100}
            changed={200}
            deleted={100}
            expandedCounts={true}
          />
        </div>
        <div
          className="flex-shrink-0 flex-grow-0 ml-1 align-items-end"
        >
          <AccountQuestionIcon
            className="text-warning"
            data-tooltip="pending review"
          />
        </div>
      </div>
    }
    titleClassName="changeset-node__content flex-fill"
    wholeTitleClickable={false}
  >
    <FileDiffNode
      className="mb-1"
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": undefined,
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": undefined,
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      isLightTheme={true}
      lineNumbers={true}
      location={
        Object {
          "hash": "",
          "key": undefined,
          "pathname": "/campaigns",
          "search": "",
          "state": undefined,
        }
      }
      node={
        Object {
          "__typename": "FileDiff",
        }
      }
      persistLines={true}
    />
  </Collapsible>,
  "className": "list-group-item e2e-changeset-node",
}
`;
